# spinning-ascii-site

./: next.config.js  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/tests/: test.rs
src/app/: action.tsx  layout.tsx  page.tsx
src/app/api/: frames.json
src/app/components/: rectButton.tsx  spinning_ascii_image.tsx  uploadForm.tsx
src/components/: spinning_ascii_image.tsx
