[package]
name = "spinning-ascii"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.18"
axum_typed_multipart = "0.5.2"
image = "0.24.6"
serde = "1.0.180"
serde_json = "1.0.104"
shuttle-axum = "0.22.0"
shuttle-runtime = "0.22.0"
shuttle-static-folder = "0.22.0"
tokio = "1.28.2"
tower-http = { version = "0.4.3", features = ["fs"] }
